// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubmissionContentLayout /> hide rubric 1`] = `
<div
  className="assessment-content-layout mr-auto ml-auto"
>
  <div
    className="content-wrapper"
  >
    <Row
      className="flex-nowrap m-0"
    >
      <Col
        className="p-0"
      >
        <SubmissionContent
          draftSaved={true}
          onFileUploaded={[MockFunction onFileUploaded]}
          onTextResponseChange={[MockFunction onTextResponseChange]}
          oraConfigData={
            Object {
              "showDuringResponse": false,
            }
          }
          submission="submission"
        />
      </Col>
    </Row>
  </div>
</div>
`;

exports[`<SubmissionContentLayout /> show rubric 1`] = `
<div
  className="assessment-content-layout mr-auto ml-auto"
>
  <div
    className="content-wrapper"
  >
    <Row
      className="flex-nowrap m-0"
    >
      <Col
        className="p-0"
      >
        <SubmissionContent
          draftSaved={true}
          onFileUploaded={[MockFunction onFileUploaded]}
          onTextResponseChange={[MockFunction onTextResponseChange]}
          oraConfigData={
            Object {
              "showDuringResponse": true,
            }
          }
          submission="submission"
        />
      </Col>
      <Rubric
        isGrading={false}
      />
    </Row>
  </div>
</div>
`;
